ADD: stages animation

--- a/src/modules/stages/stages.html
+++ b/src/modules/stages/stages.html
@@ -5,6 +5,13 @@
         </h2>
 
         <div class="stages__wrapper">
+            <!-- svgs -->
+
+
+
+            <!-- svgs -->
+
+
             <div class="stages__item">
                 <h4 data-stage="acquaintance" class="h4 hidden title-parent js-stage">
                     <span data-queue="1" class="title-animation">Знакомство</span>
@@ -16,7 +23,7 @@
                         <rect data-queue="2" x="5" y="53" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="3" x="5" y="97" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="4" x="5" y="142" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
-                        <rect data-queue="5" x="5" y="187" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect class="js-stages__rect" data-queue="5" x="5" y="187" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                     </svg>
 
 
@@ -35,7 +42,7 @@
                         <rect data-queue="2" x="5" y="53" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="3" x="5" y="97" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="4" x="5" y="142" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
-                        <rect data-queue="5" x="5" y="187" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect class="js-stages__rect" data-queue="5" x="5" y="187" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                     </svg>
 
 
@@ -54,11 +61,116 @@
                         <rect data-queue="2" x="5" y="53" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="3" x="5" y="97" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="4" x="5" y="142" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
-                        <rect data-queue="5" x="5" y="187" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect class="js-stages__rect" data-queue="5" x="5" y="187" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                     </svg>
 
 
                     <p data-stage="research" class="text20 stages__text stages__text--isLeft js-stages__text">Составляю портрет целевой аудитории и определяю потребности пользователей. Изучаю ваших конкурентов, выявляю их сильные и слабые стороны.</p>
+                </div>
+            </div>
+
+            <div class="stages__item">
+                <h4 data-stage="reference" class="h4 hidden title-parent js-stage">
+                    <span data-queue="1" class="title-animation">референсы, мудборд и дизайн-концепция</span>
+                </h4>
+
+                <div class="stages__relative">
+                    <svg class="stages__way js-stages__way" data-stage="reference" width="11" height="211" viewBox="0 0 11 211" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect data-queue="1" x="5" y="8" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect data-queue="2" x="5" y="53" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect data-queue="3" x="5" y="97" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect data-queue="4" x="5" y="142" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect class="js-stages__rect" data-queue="5" x="5" y="187" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                    </svg>
+
+
+                    <p data-stage="reference" class="text20 stages__text stages__text--isRight js-stages__text">
+                        Составляю портрет целевой аудитории и определяю потребности пользователей. Изучаю ваших конкурентов, выявляю их сильные и слабые стороны.
+                    </p>
+                </div>
+            </div>
+
+            <div class="stages__item">
+                <h4 data-stage="prototype" class="h4 hidden title-parent js-stage">
+                    <span data-queue="1" class="title-animation">прототип</span>
+                </h4>
+
+                <div class="stages__relative">
+                    <svg class="stages__way js-stages__way" data-stage="prototype" width="11" height="211" viewBox="0 0 11 211" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect data-queue="1" x="5" y="8" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect data-queue="2" x="5" y="53" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect data-queue="3" x="5" y="97" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect data-queue="4" x="5" y="142" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect class="js-stages__rect" data-queue="5" x="5" y="187" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                    </svg>
+
+
+                    <p data-stage="prototype" class="text20 stages__text stages__text--isLeft js-stages__text">
+                        Это очень важный этап, на котором мы с вами утверждаем структуру сайта. Фактически, прототип — это скелет сайта, поэтому на этом этапе мы забываем про дизайн, фокусируемся только на смыслах и обозначаем текстовый контент для сайта.
+                    </p>
+                </div>
+            </div>
+
+            <div class="stages__item">
+                <h4 data-stage="design" class="h4 hidden title-parent js-stage">
+                    <span data-queue="1" class="title-animation">создание дизайна и адаптива</span>
+                </h4>
+
+                <div class="stages__relative">
+                    <svg class="stages__way js-stages__way" data-stage="design" width="11" height="211" viewBox="0 0 11 211" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect data-queue="1" x="5" y="8" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect data-queue="2" x="5" y="53" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect data-queue="3" x="5" y="97" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect data-queue="4" x="5" y="142" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect class="js-stages__rect" data-queue="5" x="5" y="187" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                    </svg>
+
+
+                    <p data-stage="design" class="text20 stages__text stages__text--isRight js-stages__text">
+                        Составляю портрет целевой аудитории и определяю потребности пользователей. Изучаю ваших конкурентов, выявляю их сильные и слабые стороны.
+                    </p>
+                </div>
+            </div>
+
+            <div class="stages__item">
+                <h4 data-stage="transfer" class="h4 hidden title-parent js-stage">
+                    <span data-queue="1" class="title-animation">передача макета</span>
+                </h4>
+
+                <div class="stages__relative">
+                    <svg class="stages__way js-stages__way" data-stage="transfer" width="11" height="211" viewBox="0 0 11 211" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect data-queue="1" x="5" y="8" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect data-queue="2" x="5" y="53" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect data-queue="3" x="5" y="97" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect data-queue="4" x="5" y="142" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect class="js-stages__rect" data-queue="5" x="5" y="187" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                    </svg>
+
+
+                    <p data-stage="transfer" class="text20 stages__text stages__text--isLeft js-stages__text">
+                        Это очень важный этап, на котором мы с вами утверждаем структуру сайта. Фактически, прототип — это скелет сайта, поэтому на этом этапе мы забываем про дизайн, фокусируемся только на смыслах и обозначаем текстовый контент для сайта.
+                    </p>
+                </div>
+            </div>
+
+            <div class="stages__item">
+                <h4 data-stage="support" class="h4 hidden title-parent js-stage">
+                    <span data-queue="1" class="title-animation">поддержка</span>
+                </h4>
+
+                <div class="stages__relative">
+                    <svg class="stages__way js-stages__way" data-stage="support" width="11" height="211" viewBox="0 0 11 211" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect data-queue="1" x="5" y="8" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect data-queue="2" x="5" y="53" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect data-queue="3" x="5" y="97" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect data-queue="4" x="5" y="142" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                        <rect class="js-stages__rect" data-queue="5" x="5" y="187" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
+                    </svg>
+
+
+                    <p data-stage="support" class="text20 stages__text stages__text--isRight js-stages__text">
+                        Составляю портрет целевой аудитории и определяю потребности пользователей. Изучаю ваших конкурентов, выявляю их сильные и слабые стороны.
+                    </p>
                 </div>
             </div>
         </div>
