FIX: slider / stages / about

--- a/src/modules/about/about.html
+++ b/src/modules/about/about.html
@@ -120,7 +120,7 @@
                         </p>
 
                         <a class="tabs__resume hidden title-parent inline-block" target="_blank" href="https://katedesign.info/resources/resume.pdf">
-                            <picture>
+                            <picture data-queue="10" class="title-animation">
                                 <source type="image/avif" srcset="img/resume@1x.avif 1x, img/resume@2x.avif 2x">
                                 <source type="image/webp" srcset="img/resume@1x.webp 1x, img/resume@2x.webp 2x">
                                 <img src="img/resume@1x.png" srcset="img/resume@2x.png 2x" alt="Resume">
