--- a/src/modules/stages/stages.html
+++ b/src/modules/stages/stages.html
@@ -103,7 +103,7 @@
                         Мы с Вами созваниваемся, обсуждаем детали проекта: цели и задачи сайта, стилистику, объем работы, верстку макета. После этого предлагаю план по разработке сайта/приложения
                     </p>
 
-                    <svg class="stages__way js-stages__way" data-stage="acquaintance" width="11" height="211" viewBox="0 0 11 211" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="stages__way js-stages__way" data-stage="acquaintance" width="11" height="211" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect data-queue="1" x="5" y="8" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="2" x="5" y="53" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="3" x="5" y="97" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
@@ -123,7 +123,7 @@
                         Когда вы выбрали тариф, я составляю техническое задание на создание сайта с учетом ваших пожеланий, мы подписываем договор и после внесения предоплаты я приступаю к работе.
                     </p>
 
-                    <svg class="stages__way js-stages__way" data-stage="contract" width="11" height="211" viewBox="0 0 11 211" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="stages__way js-stages__way" data-stage="contract" width="11" height="211" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect data-queue="1" x="5" y="8" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="2" x="5" y="53" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="3" x="5" y="97" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
@@ -143,7 +143,7 @@
                         Составляю портрет целевой аудитории и определяю потребности пользователей. Изучаю ваших конкурентов, выявляю их сильные и слабые стороны.
                     </p>
 
-                    <svg class="stages__way js-stages__way" data-stage="research" width="11" height="211" viewBox="0 0 11 211" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="stages__way js-stages__way" data-stage="research" width="11" height="211" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect data-queue="1" x="5" y="8" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="2" x="5" y="53" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="3" x="5" y="97" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
@@ -163,7 +163,7 @@
                         Составляю портрет целевой аудитории и определяю потребности пользователей. Изучаю ваших конкурентов, выявляю их сильные и слабые стороны.
                     </p>
 
-                    <svg class="stages__way js-stages__way" data-stage="reference" width="11" height="211" viewBox="0 0 11 211" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="stages__way js-stages__way" data-stage="reference" width="11" height="211" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect data-queue="1" x="5" y="8" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="2" x="5" y="53" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="3" x="5" y="97" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
@@ -183,7 +183,7 @@
                         Это очень важный этап, на котором мы с вами утверждаем структуру сайта. Фактически, прототип — это скелет сайта, поэтому на этом этапе мы забываем про дизайн, фокусируемся только на смыслах и обозначаем текстовый контент для сайта.
                     </p>
 
-                    <svg class="stages__way js-stages__way" data-stage="prototype" width="11" height="211" viewBox="0 0 11 211" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="stages__way js-stages__way" data-stage="prototype" width="11" height="211" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect data-queue="1" x="5" y="8" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="2" x="5" y="53" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="3" x="5" y="97" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
@@ -203,7 +203,7 @@
                         Составляю портрет целевой аудитории и определяю потребности пользователей. Изучаю ваших конкурентов, выявляю их сильные и слабые стороны.
                     </p>
 
-                    <svg class="stages__way js-stages__way" data-stage="design" width="11" height="211" viewBox="0 0 11 211" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="stages__way js-stages__way" data-stage="design" width="11" height="211" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect data-queue="1" x="5" y="8" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="2" x="5" y="53" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="3" x="5" y="97" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
@@ -223,7 +223,7 @@
                         Это очень важный этап, на котором мы с вами утверждаем структуру сайта. Фактически, прототип — это скелет сайта, поэтому на этом этапе мы забываем про дизайн, фокусируемся только на смыслах и обозначаем текстовый контент для сайта.
                     </p>
 
-                    <svg class="stages__way js-stages__way" data-stage="transfer" width="11" height="211" viewBox="0 0 11 211" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="stages__way js-stages__way" data-stage="transfer" width="11" height="211" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect data-queue="1" x="5" y="8" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="2" x="5" y="53" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="3" x="5" y="97" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
@@ -243,7 +243,7 @@
                         Составляю портрет целевой аудитории и определяю потребности пользователей. Изучаю ваших конкурентов, выявляю их сильные и слабые стороны.
                     </p>
 
-                    <svg class="stages__way js-stages__way" data-stage="support" width="11" height="211" viewBox="0 0 11 211" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="stages__way js-stages__way" data-stage="support" width="11" height="211" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect data-queue="1" x="5" y="8" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="2" x="5" y="53" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
                         <rect data-queue="3" x="5" y="97" width="1" height="16" rx="0.5" fill="#C8B5FC"/>
