FIX: massive fix

--- a/src/modules/reasons/reasons.html
+++ b/src/modules/reasons/reasons.html
@@ -2,7 +2,10 @@
     <div class="reasons container main-padding">
         <div class="hidden title-parent reasons__title main-title">
             <div data-queue="1" class="reasons__sum h2 title-animation">
-                7
+                <svg width="90" height="90" viewBox="0 0 90 90" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect width="90" height="90" rx="8" fill="#7546F7"/>
+                    <path d="M51.5 31V34.84L45.1182 59H40.7848L47.1273 35H38.5V31H51.5Z" fill="#FCF7FF"/>
+                </svg>
             </div>
 
             <h2 data-queue="2" class="title-animation h2">
