--- a/src/modules/about/about.html
+++ b/src/modules/about/about.html
@@ -1,7 +1,7 @@
 <section id="about">
     <div class="about container main-padding">
 
-        <h2 class="h2 hidden title-parent main-title">
+        <h2 class="h2 hidden title-parent title-padding">
             <span data-queue="1" class="title-animation">Обо мне</span>
         </h2>
 
