--- a/src/modules/discount/discount.html
+++ b/src/modules/discount/discount.html
@@ -1,7 +1,7 @@
 <section id="discount">
     <div class="discount main-padding">
         <div class="discount__wrapper container">
-            <h2 class="h2 hidden title-parent main-title">
+            <h2 class="h2 hidden title-parent title-padding">
                 <span data-queue="1" class="title-animation">-10% на первый заказ</span>
             </h2>
 
