--- a/src/modules/form/form.html
+++ b/src/modules/form/form.html
@@ -1,5 +1,5 @@
 <section id="form">
-    <div class="form">
+    <div class="form main-padding container">
         <div class="hidden title-parent form__title container">
             <h2 data-queue="1" class="title-animation h1">
                 Заполните творческий бриф
