--- a/src/modules/header/header.html
+++ b/src/modules/header/header.html
@@ -1,6 +1,6 @@
 <div class="mobile__padding"></div>
 
-<div class="header">
+<div class="header container">
     <div class="header__title">
         <div class="header__gradient-left">
             <picture>
