--- a/src/modules/nav/nav.html
+++ b/src/modules/nav/nav.html
@@ -1,7 +1,7 @@
 <nav class="nav js-nav">
     <div class="read-progress js-read-progress"></div>
 
-    <div class="nav__mobile">
+    <div class="nav__mobile container">
         <h3 class="h3">KateDesign</h3>
 
         <div class="nav__burger js-burger">
