--- a/src/modules/portfolio/portfolio.html
+++ b/src/modules/portfolio/portfolio.html
@@ -1,6 +1,6 @@
 <section id="portfolio">
     <div class="portfolio container main-padding">
-        <h2 class="h2 hidden title-parent main-title">
+        <h2 class="h2 hidden title-parent title-padding">
             <span data-queue="1" class="title-animation">Портфолио</span>
         </h2>
 
@@ -96,10 +96,10 @@
             </div>
         </div>
 
-        <a href="https://flaxen-dust-967.notion.site/1ea64adee5374bdd9760f0ac4a579e08?pvs=4" target="_blank">
+        <!-- <a href="https://flaxen-dust-967.notion.site/1ea64adee5374bdd9760f0ac4a579e08?pvs=4" target="_blank">
             <button class="button button-big button-solid hidden">
                 <p class="buttonBigText">Смотреть еще</p>
             </button>
-        </a>
+        </a> -->
     </div>
 </section>
