--- a/src/modules/services/services.html
+++ b/src/modules/services/services.html
@@ -1,11 +1,11 @@
 <section id="services">
     <div class="services container main-padding">
-        <h2 class="h2 hidden title-parent main-title">
+        <h2 class="h2 hidden title-parent title-padding">
             <span data-queue="1" class="title-animation">Услуги</span>
         </h2>
 
         <div class="hidden">
-            <div class="services__item service-entry">
+            <div data-service="first" class="services__item service-entry">
                 <h3 class="h3">Одностраничный сайт</h3>
 
                 <div class="services__about">
