--- a/src/modules/stages/stages.html
+++ b/src/modules/stages/stages.html
@@ -1,6 +1,6 @@
 <section id="stages">
     <div class="stages container main-padding">
-        <h2 class="h2 hidden title-parent main-title">
+        <h2 class="h2 hidden title-parent title-padding">
             <span data-queue="1" class="title-animation">Этапы работы над <span class="title-span">вашим</span> проектом</span>
         </h2>
 
