--- a/src/modules/faq/faq.html
+++ b/src/modules/faq/faq.html
@@ -1,6 +1,6 @@
 <section id="faq">
     <div class="faq container main-padding">
-        <h2 class="h2 hidden title-parent main-title">
+        <h2 class="h2 hidden title-parent title-padding">
             <span data-queue="1" class="title-animation">FAQ</span>
         </h2>
 
