--- a/src/modules/popup/FoodPopup.html
+++ b/src/modules/popup/FoodPopup.html
@@ -1,7 +1,7 @@
-<div id="FoodPopup" class="popup">
+<div id="FoodPopup" data-popup="5" class="popup js-sliderPopup">
     <div id="FoodBg" class="bg"></div>
     <div class="popup__body">
-        <div class="popup__content">
+        <div class="popup__content" id="FoodContent">
             <div class="popup__wrapper">
                 <div data-popup="food" class="popup__logo">
                     <svg class="logo" width="192" height="44" viewBox="0 0 192 44" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -59,6 +59,22 @@
                         <source type="image/webp" srcset="img/popup_Food-4-picture@2x.webp 1x, img/popup_Food-4-picture@4x.webp 2x">
                         <img src="img/popup_Food-4-picture@2x.png" srcset="img/popup_Food-4-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
+                </div>
+
+                <div class="popup__switcher">
+                    <button data-popup="5" data-direction="left" class="button button-big button-solid js-popupSliderButton">
+                        <svg class="popup__switcher-isLeft" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M20.25 12L3.75 12" stroke="#FCF7FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M10.5 18.75L3.75 12L10.5 5.25" stroke="#FCF7FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </button>
+
+                    <button data-popup="5" data-direction="right" class="button button-big button-solid js-popupSliderButton">
+                        <svg class="popup__switcher-isRight" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M20.25 12L3.75 12" stroke="#FCF7FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M10.5 18.75L3.75 12L10.5 5.25" stroke="#FCF7FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </button>
                 </div>
             </div>
         </div>
