--- a/src/modules/popup/VictorianPopup.html
+++ b/src/modules/popup/VictorianPopup.html
@@ -1,7 +1,7 @@
-<div id="VictorianPopup" class="popup">
+<div id="VictorianPopup" data-popup="8" class="popup js-sliderPopup">
     <div id="VictorianBg" class="bg"></div>
     <div class="popup__body">
-        <div class="popup__content">
+        <div class="popup__content" id="VictorianContent">
             <div class="popup__wrapper">
                 <div data-popup="victorian" class="popup__logo">
                     <svg class="logo" width="266" height="80" viewBox="0 0 266 80" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -16,8 +16,6 @@
                         <path d="M214.569 50.9915L227.999 79.1841H220.331L211.892 59.2861L214.569 50.9915ZM206.04 76.4192C205.707 77.2351 205.752 77.8696 206.176 78.3229C206.599 78.7459 207.068 78.9575 207.582 78.9575H207.945V79.4107H198.871V78.9575C198.871 78.9575 198.931 78.9575 199.052 78.9575C199.173 78.9575 199.234 78.9575 199.234 78.9575C199.839 78.9575 200.474 78.7762 201.139 78.4135C201.805 78.0207 202.349 77.3559 202.773 76.4192H206.04ZM214.569 50.9915L214.66 56.4305L204.815 79.2747H201.457L212.074 56.4759C212.134 56.2946 212.271 55.9773 212.482 55.524C212.694 55.0406 212.921 54.5118 213.163 53.9376C213.405 53.3333 213.632 52.7743 213.843 52.2606C214.055 51.7167 214.176 51.2936 214.206 50.9915H214.569ZM218.517 70.5269V72.2946H206.947V70.5269H218.517ZM219.197 76.4192H226.683C227.137 77.3559 227.697 78.0207 228.362 78.4135C229.028 78.7762 229.663 78.9575 230.268 78.9575C230.268 78.9575 230.328 78.9575 230.449 78.9575C230.57 78.9575 230.631 78.9575 230.631 78.9575V79.4107H217.292V78.9575H217.655C218.169 78.9575 218.638 78.7459 219.061 78.3229C219.485 77.8696 219.53 77.2351 219.197 76.4192Z" fill="#ECECEC"/>
                         <path d="M235.692 51.5807L262.325 74.9688L262.779 80L236.191 56.6119L235.692 51.5807ZM235.874 76.6458V79.4107H232.516V78.9575C232.516 78.9575 232.637 78.9575 232.879 78.9575C233.121 78.9575 233.242 78.9575 233.242 78.9575C233.938 78.9575 234.528 78.7459 235.012 78.3229C235.495 77.8696 235.737 77.3106 235.737 76.6458H235.874ZM241.953 76.6458C241.984 77.3106 242.241 77.8696 242.725 78.3229C243.209 78.7459 243.783 78.9575 244.449 78.9575C244.449 78.9575 244.57 78.9575 244.812 78.9575C245.084 78.9575 245.22 78.9575 245.22 78.9575V79.4107H241.863V76.6458H241.953ZM235.692 51.5807L241.953 58.3796V79.4107H235.737V56.7478C235.737 55.2068 235.662 53.9678 235.511 53.0311C235.359 52.0642 235.284 51.5807 235.284 51.5807H235.692ZM262.733 52.2153V74.6968C262.733 75.7544 262.764 76.6912 262.824 77.507C262.915 78.2927 262.99 78.9121 263.051 79.3654C263.142 79.7884 263.187 80 263.187 80H262.779L256.517 72.7932V52.2153H262.733ZM262.597 54.9801V52.2153H266V52.6685C266 52.6685 265.864 52.6685 265.592 52.6685C265.35 52.6685 265.229 52.6685 265.229 52.6685C264.563 52.6685 263.973 52.8951 263.459 53.3484C262.975 53.7714 262.733 54.3153 262.733 54.9801H262.597ZM256.517 54.9801C256.487 54.3153 256.23 53.7714 255.746 53.3484C255.292 52.8951 254.718 52.6685 254.022 52.6685C254.022 52.6685 253.886 52.6685 253.614 52.6685C253.372 52.6685 253.251 52.6685 253.251 52.6685V52.2153H256.608V54.9801H256.517Z" fill="#ECECEC"/>
                     </svg>
-
-
 
                     <a id="VictorianCross" class="popup__close">
                         <svg class="close">
@@ -61,6 +59,15 @@
                         <source type="image/webp" srcset="img/popup_Victorian-4-picture@2x.webp 1x, img/popup_Victorian-4-picture@4x.webp 2x">
                         <img src="img/popup_Victorian-4-picture@2x.png" srcset="img/popup_Victorian-4-picture@4x.png 2x" alt="PortfolioPicture">
                     </picture>
+                </div>
+
+                <div class="popup__switcher">
+                    <button data-popup="8" data-direction="left" class="button button-big button-solid js-popupSliderButton">
+                        <svg class="popup__switcher-isLeft" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M20.25 12L3.75 12" stroke="#FCF7FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M10.5 18.75L3.75 12L10.5 5.25" stroke="#FCF7FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </button>
                 </div>
             </div>
         </div>
