--- a/src/modules/popup/holdMyCodePopup.html
+++ b/src/modules/popup/holdMyCodePopup.html
@@ -1,7 +1,7 @@
-<div id="holdMyCodePopup" class="popup">
+<div id="holdMyCodePopup" data-popup="0" class="popup js-sliderPopup">
     <div id="holdMyCodeBg" class="bg"></div>
     <div class="popup__body">
-        <div class="popup__content">
+        <div class="popup__content" id="holdMyCodeContent">
 
             <div class="popup__wrapper">
                 <div data-popup="holdMyCode" class="popup__logo">
@@ -93,6 +93,15 @@
                             <img src="img/popup_HoldMyCode-6-picture@2x.png" srcset="img/popup_HoldMyCode-6-picture@4x.png 2x" alt="PortfolioPicture">
                         </picture>
                     </div>
+                </div>
+
+                <div class="popup__switcher">
+                    <button data-popup="0" data-direction="right" class="button button-big button-solid js-popupSliderButton">
+                        <svg class="popup__switcher-isRight" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M20.25 12L3.75 12" stroke="#FCF7FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M10.5 18.75L3.75 12L10.5 5.25" stroke="#FCF7FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </button>
                 </div>
             </div>
         </div>
