--- a/src/modules/popup/winePopup.html
+++ b/src/modules/popup/winePopup.html
@@ -1,7 +1,7 @@
-<div id="WinePopup" class="popup">
+<div id="WinePopup" data-popup="1" class="popup js-sliderPopup">
     <div id="WineBg" class="bg"></div>
     <div class="popup__body">
-        <div class="popup__content">
+        <div class="popup__content" id="WineContent">
             <div class="popup__wrapper">
                 <div data-popup="wine" class="popup__logo">
                     <svg class="logo" width="226" height="54" viewBox="0 0 226 54" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -47,6 +47,22 @@
                 </div>
 
                 <video src="img/wine.mp4" controls></video>
+
+                <div class="popup__switcher">
+                    <button data-popup="1" data-direction="left" class="button button-big button-solid js-popupSliderButton">
+                        <svg class="popup__switcher-isLeft" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M20.25 12L3.75 12" stroke="#FCF7FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M10.5 18.75L3.75 12L10.5 5.25" stroke="#FCF7FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </button>
+
+                    <button data-popup="1" data-direction="right" class="button button-big button-solid js-popupSliderButton">
+                        <svg class="popup__switcher-isRight" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M20.25 12L3.75 12" stroke="#FCF7FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M10.5 18.75L3.75 12L10.5 5.25" stroke="#FCF7FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
