--- a/src/modules/reasons/reasons.html
+++ b/src/modules/reasons/reasons.html
@@ -1,6 +1,6 @@
 <section id="reasons">
     <div class="reasons container main-padding">
-        <div class="hidden title-parent reasons__title main-title">
+        <div class="hidden title-parent reasons__title title-padding">
             <div data-queue="1" class="reasons__sum h2 title-animation">
                 <svg width="90" height="90" viewBox="0 0 90 90" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <rect width="90" height="90" rx="8" fill="#7546F7"/>
