--- a/src/modules/popup/winePopup.html
+++ b/src/modules/popup/winePopup.html
@@ -46,7 +46,9 @@
                     <p class="text20 popup__text">Разработать анимацию слайдеров в Figma</p>
                 </div>
 
-                <video src="img/wine.mp4" controls></video>
+                <div data-item="last" class="popup__item">
+                    <video src="img/wine.mp4" controls></video>
+                </div>
 
                 <div class="popup__switcher">
                     <button data-popup="1" data-direction="left" class="button button-big button-solid js-popupSliderButton">
