--- a/src/modules/popup/CalendarPopup.html
+++ b/src/modules/popup/CalendarPopup.html
@@ -39,7 +39,7 @@
                     </picture>
                 </div>
 
-                <div class="popup__twoPicture">
+                <div data-item="last" class="popup__twoPicture">
                     <picture>
                         <source type="image/avif" srcset="img/popup_Calendar-3-picture@2x.avif 1x, img/popup_Calendar-3-picture@4x.avif 2x">
                         <source type="image/webp" srcset="img/popup_Calendar-3-picture@2x.webp 1x, img/popup_Calendar-3-picture@4x.webp 2x">
