--- a/src/modules/popup/holdMyCodePopup.html
+++ b/src/modules/popup/holdMyCodePopup.html
@@ -76,7 +76,7 @@
                     <p class="text20 popup__text">В моей практике заказчики дают 4-5 правок с 0 до конечного результата. После этих операций клиент получает готовый дизайн.</p>
                 </div>
 
-                <div class="popup__item">
+                <div data-item="last" class="popup__item">
                     <h4 class="h4">Готовый сайт</h4>
                     <p class="text20 popup__text">В этом проекте, в конечном итоге мы полностью поменяли концепцию, и такое бывает:)</p>
 
@@ -95,7 +95,7 @@
                     </div>
                 </div>
 
-                <div class="popup__switcher">
+                <div data-popup="0" class="popup__switcher">
                     <button data-popup="0" data-direction="right" class="button button-big button-solid js-popupSliderButton">
                         <svg class="popup__switcher-isRight" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M20.25 12L3.75 12" stroke="#FCF7FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
