--- a/src/modules/about/about.html
+++ b/src/modules/about/about.html
@@ -1,5 +1,12 @@
 <section id="about">
     <div class="about container main-padding">
+        <div class="hidden">
+            <div class="about__ellipse-isLeft"></div>
+        </div>
+
+        <div class="hidden">
+            <div class="about__ellipse-isRight"></div>
+        </div>
 
         <h2 class="h2 hidden title-parent title-padding">
             <span data-queue="1" class="title-animation">Обо мне</span>
