FIX: about block

--- a/src/modules/about/about.html
+++ b/src/modules/about/about.html
@@ -1,19 +1,14 @@
 <section id="about">
     <div class="about container main-padding">
-        <div class="hidden">
-            <div class="about__ellipse-isLeft"></div>
-        </div>
-
-        <div class="hidden">
-            <div class="about__ellipse-isRight"></div>
-        </div>
-
         <h2 class="h2 hidden title-parent title-padding">
             <span data-queue="1" class="title-animation">Обо мне</span>
         </h2>
 
         <!-- CHAT -->
         <div class="chat js-chat hidden">
+            <div class="hidden ellipse">
+                <div class="about__ellipse-isRight"></div>
+            </div>
             <!-- CLIENT -->
             <div data-whois="client" class="chat__item">
                 <div class="chat__avatar">
@@ -81,6 +76,222 @@
 
         <!-- Tabcontainer -->
         <div class="tabs hidden">
+            <div class="hidden ellipse">
+                <div class="about__ellipse-isLeft"></div>
+            </div>
+
+            <div class="tabsMenu">
+                <div class="tabs__header-isMobile js-tabs__slider"></div>
+
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <div class="swiper-inner">
+                            <div class="tabs__general">
+                                <p class="text20 hidden title-parent">
+                                    <span data-queue="7" class="title-animation">
+                                        Меня зовут Екатерина, я - UX/UI дизайнер, мне 21 год. Заканчиваю университет.
+                                        Очень люблю свою профессиональную сферу. Верю в то, что правильный дизайн поможет
+                                        пользователю достичь своих целей.
+                                    </span>
+                                </p>
+
+                                <p class="text20 hidden title-parent">
+                                    <span data-queue="8" class="title-animation">
+                                        Работаю как с крупными компаниями, так и с небольшими проектами.
+                                    </span>
+                                </p>
+
+                                <p class="text20 hidden title-parent">
+                                    <span data-queue="9" class="title-animation">
+                                        Создаю красивые и практичные сайты, повышающие конверсию.
+                                        Разрабатываю стилистику сайта, исходя из фирменного стиля компании, или с нуля.
+                                        Продумываю анимации и переходы по страницам.
+                                    </span>
+                                </p>
+
+                                <a class="tabs__resume hidden title-parent inline-block" target="_blank" href="https://katedesign.info/resources/resume.pdf">
+                                    <picture data-queue="10" class="title-animation">
+                                        <source type="image/avif" srcset="img/resume@1x.avif 1x, img/resume@2x.avif 2x">
+                                        <source type="image/webp" srcset="img/resume@1x.webp 1x, img/resume@2x.webp 2x">
+                                        <img src="img/resume@1x.png" srcset="img/resume@2x.png 2x" alt="Resume">
+                                    </picture>
+
+                                    <span data-queue="10" class="text20 title-animation">Резюме_Ракитова_Екатерина.pdf</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="swiper-inner">
+                            <div class="tabs__education">
+                                <div class="tabs__checkpoint">
+                                    <div class="tabs__year">
+                                        <svg>
+                                            <use xlink:href="img/sprite.svg#education__checkpoint"></use>
+                                        </svg>
+
+                                        <h4 class="h4">2019</h4>
+                                    </div>
+
+                                    <div class="tabs__way">
+                                        <svg>
+                                            <use xlink:href="img/sprite.svg#way"></use>
+                                        </svg>
+
+                                        <p class="text20">Графический дизайн. SHAD - школа архитектуры и дизайна</p>
+                                    </div>
+                                </div>
+
+                                <div class="tabs__checkpoint">
+                                    <div class="tabs__year">
+                                        <svg>
+                                            <use xlink:href="img/sprite.svg#education__checkpoint"></use>
+                                        </svg>
+
+                                        <h4 class="h4">2022</h4>
+                                    </div>
+
+                                    <div class="tabs__way">
+                                        <svg>
+                                            <use xlink:href="img/sprite.svg#way"></use>
+                                        </svg>
+
+                                        <p class="text20">Udemy - Веб дизайн в Figma 2022 - с нуля до результата, основы UX/UI</p>
+                                    </div>
+                                </div>
+
+                                <div class="tabs__checkpoint">
+                                    <div class="tabs__year">
+                                        <svg>
+                                            <use xlink:href="img/sprite.svg#education__checkpoint"></use>
+                                        </svg>
+
+                                        <h4 class="h4">2023</h4>
+                                    </div>
+
+                                    <div class="tabs__way">
+                                        <svg>
+                                            <use xlink:href="img/sprite.svg#way"></use>
+                                        </svg>
+
+                                        <p class="text20">Udemy - Веб дизайн в Figma 2023 Продвинутый уровень. Создание UI Kit</p>
+                                    </div>
+                                </div>
+
+                                <div class="tabs__checkpoint">
+                                    <div class="tabs__year">
+                                        <svg>
+                                            <use xlink:href="img/sprite.svg#education__checkpoint"></use>
+                                        </svg>
+
+                                        <h4 class="h4">2020 <span>-</span> 2024</h4>
+                                    </div>
+
+                                    <div class="tabs__way">
+                                        <svg></svg>
+
+                                        <p class="text20">Московский Политехнический Университет - Веб-технологии</p>
+                                    </div>
+                                </div>
+
+                                <div class="tabs__certificate">
+                                    <button class="button button-small button-opacity" id="Certificate__preview">
+                                        <p class="buttonBigText">сертификаты</p>
+
+                                        <svg class="">
+                                            <use xlink:href="img/sprite.svg#buttonArrow"></use>
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="swiper-inner">
+                            <div class="tabs__experience">
+                                <p class="text20">c 2021 года я работаю на себя. Создаю дизайн-проекты любой сложности. Общаюсь с заказчиком, анализирую конкурентов, составляю и анализирую User experience. Создаю UI-kit.</p>
+                                <p class="text20">Выполнила более 10 проектов от частных клиентов, в том числе европейских, как следствие: есть опыт деловой переписки, составления ТЗ вместе с ними, понимание специфичности областей их работы. </p>
+
+                                <div data-customer="BerkoDesign" class="tabs__accordion js-tabs__accordion">
+                                    <div class="tabs__customer">
+                                        <h4 class="text20">Berko Design</h4>
+
+                                        <div class="tabs__plus js-tabs__plus">
+                                            <div></div>
+                                            <div></div>
+                                        </div>
+                                    </div>
+
+                                    <div class="tabs__description js-tabs__description">
+                                        <p class="text20">
+                                            Работаем на постоянной основе с 2022 года. Разрабатывала одностраничные сайты для медицинских учреждений
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <div data-customer="Resanta" class="tabs__accordion js-tabs__accordion">
+                                    <div class="tabs__customer">
+                                        <h4 class="text20">Ресанта</h4>
+
+                                        <div class="tabs__plus js-tabs__plus">
+                                            <div></div>
+                                            <div></div>
+                                        </div>
+                                    </div>
+
+                                    <div class="tabs__description js-tabs__description">
+                                        <p class="text20">
+                                            Работаем на постоянной основе с 2023 года. Разрабатываем корпоративные приложения для компании, а так же обрабатываем качество изображений на сайте
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="swiper-inner">
+                            <div class="tabs__instruments">
+                                <div class="tabs__instrument">
+                                    <svg class="">
+                                      <use xlink:href="img/sprite.svg#figma"></use>
+                                    </svg>
+
+                                    <p class="text20">Figma</p>
+                                </div>
+
+                                <div class="tabs__instrument">
+                                    <svg class="">
+                                      <use xlink:href="img/sprite.svg#illustrator"></use>
+                                    </svg>
+
+                                    <p class="text20">Adobe Illustrator</p>
+                                </div>
+
+                                <div class="tabs__instrument">
+                                    <svg class="">
+                                      <use xlink:href="img/sprite.svg#photoshop"></use>
+                                    </svg>
+
+                                    <p class="text20">Adobe Photoshop</p>
+                                </div>
+
+                                <div class="tabs__instrument">
+                                    <svg class="">
+                                      <use xlink:href="img/sprite.svg#indesign"></use>
+                                    </svg>
+
+                                    <p class="text20">Adobe InDesign</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="tabs__header">
                 <div data-header="0" class="tabs__item tabs__item-isActive h3 hidden title-parent">
                     <span data-queue="1" class="title-animation">Общая</span>
@@ -213,7 +424,7 @@
 
                     <div class="tabs__certificate">
                         <button class="button button-small button-opacity" id="Certificate__preview">
-                            <p>Сертификаты</p>
+                            <p class="buttonBigText">сертификаты</p>
 
                             <svg class="">
                                 <use xlink:href="img/sprite.svg#buttonArrow"></use>
