FIX: massive FIX2

--- a/src/modules/faq/faq.html
+++ b/src/modules/faq/faq.html
@@ -55,7 +55,7 @@
                             Все моменты мы обсуждаем на самом начальном этапе разработки. Далее заключаем договор, в котором указаны все этапы работ, сроки, стоимость, порядок оплаты и итог, который клиент получает по окончанию сотрудничества.
                         </p>
 
-                        <a class="js-servicesWarranty faq__text-isNonFirstText">Подробнее о гарантиях</a>
+                        <a id="WarrantyPopup4" class="js-servicesWarranty faq__text-isNonFirstText">Подробнее о гарантиях</a>
                     </div>
                 </div>
             </div>
@@ -122,6 +122,12 @@
                     </p>
                 </div>
             </div>
+
+            <a target="_blank" href="https://taplink.cc/rakitova_katye">
+                <button data-queue="2" class="button button-small button-opacity">
+                    <p class="buttonSmallText">Не нашли ответа на свой вопрос? Напишите мне</p>
+                </button>
+            </a>
         </div>
     </div>
 </section>
