--- a/src/modules/popup/CertificatePopup.html
+++ b/src/modules/popup/CertificatePopup.html
@@ -36,7 +36,7 @@
                         </picture>
                     </div>
 
-                    <div class="popup__certificate">
+                    <div data-item="last" class="popup__certificate">
                         <h2 class="h2">2019</h2>
                         <p class="text20 popup__text">Графический дизайн. SHAD - школа архитектуры и дизайна</p>
 
