--- a/src/modules/popup/WarrantyPopup.html
+++ b/src/modules/popup/WarrantyPopup.html
@@ -31,7 +31,7 @@
                     </ul>
                 </div>
 
-                <div class="popup__item">
+                <div data-item="last" class="popup__item">
                     <a href="#form" class="js-popupWarranty-button">
                         <button class="button button-small button-opacity">
                             <p class="buttonBigText">Заказать сайт</p>
