--- a/src/modules/popup/winePopup.html
+++ b/src/modules/popup/winePopup.html
@@ -47,7 +47,7 @@
                 </div>
 
                 <div data-item="last" class="popup__item">
-                    <video src="img/wine.mp4" controls></video>
+                    <video src="img/wine.mp4" controls controlsList="nodownload"></video>
                 </div>
 
                 <div class="popup__switcher">
