--- a/src/modules/reasons/reasons.html
+++ b/src/modules/reasons/reasons.html
@@ -93,7 +93,7 @@
                                 Я гарантирую высокое качество работы, которое будет соответствовать ожиданиям клиента
                             </p>
 
-                            <button class="button button-small button-opacity js-servicesWarranty">
+                            <button id="WarrantyPopup3" class="button button-small button-opacity js-servicesWarranty">
                                 <p class="buttonBigText">Подробнее</p>
 
                                 <svg class="">
@@ -177,7 +177,7 @@
                         Я гарантирую высокое качество работы, которое будет соответствовать ожиданиям клиента
                     </p>
 
-                    <button class="button button-small button-opacity" id="Warranty__preview">
+                    <button class="button button-small button-opacity js-servicesWarranty" id="Warranty__preview">
                         <p class="buttonBigText">Подробнее</p>
 
                         <svg class="">
