--- a/src/modules/services/services.html
+++ b/src/modules/services/services.html
@@ -42,7 +42,7 @@
                             <span class="services__answer">от 1 недели</span>
                         </p>
 
-                        <p class="text16">*правки по макету вносятся бесплатно в течение 2 месяцев после завершения работы. <span class="js-servicesWarranty">Подробнее</span></p>
+                        <p class="text16">*правки по макету вносятся бесплатно в течение 2 месяцев после завершения работы. <span id="WarrantyPopup0" class="js-servicesWarranty">Подробнее</span></p>
                     </div>
 
                     <a href="#form">
@@ -98,7 +98,7 @@
                             <span class="services__question">Сроки работы: </span><br>
                             <span class="services__answer">от 3 недель</span>
                         </p>
-                        <p class="text16">*правки по макету вносятся бесплатно в течение 2 месяцев после завершения работы. <span class="js-servicesWarranty">Подробнее</span></p>
+                        <p class="text16">*правки по макету вносятся бесплатно в течение 2 месяцев после завершения работы. <span id="WarrantyPopup1" class="js-servicesWarranty">Подробнее</span></p>
                     </div>
 
                     <a href="#form">
@@ -151,7 +151,7 @@
                             <span class="services__question">Сроки работы: </span><br>
                             <span class="services__answer">от 3 недель</span>
                         </p>
-                        <p class="text16">*правки по макету вносятся бесплатно в течение 2 месяцев после завершения работы. <span class="js-servicesWarranty">Подробнее</span></p>
+                        <p class="text16">*правки по макету вносятся бесплатно в течение 2 месяцев после завершения работы. <span id="WarrantyPopup2" class="js-servicesWarranty">Подробнее</span></p>
                     </div>
 
                     <a href="#form">
